# Ai-Ishikawa-Diagram-Builder

./: README.md  pyproject.toml
fishbone_backend/: build_gemeni_request.py  gemeni_function_caller.py  gemeni_functions.py  main.py
